syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcServices.UserManagement"; // ðŸ”¥ this is new

service UnitService {
    rpc GetAllUnit (google.protobuf.Empty) returns (UnitListResponse);
}

message UnitDto {
    int32 UnitId = 1;
    string UnitName = 2;
    string ShortName = 3;
    string UnitHeadName = 4;
    string OldUnitId = 5;
}

message UnitListResponse {
    repeated UnitDto units = 1;
}